--- a/doctors/templates/doctors/doctor_search_page.html
+++ b/doctors/templates/doctors/doctor_search_page.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <form method="get">
-    {{ form.as_table }}
+    {{ form.as_p }}
     <button type="submit">Поиск</button>
 </form>
 
