--- a/templates/errors/text_page.html
+++ b/templates/errors/text_page.html
@@ -1,7 +1,8 @@
 {% extends 'doctors/base.html' %}
 {% load static %}
 {% block content %}
-BEBRA
+<h2>{{ title }}</h2>
+<p>{{ body }}</p>
 
 
 {% endblock %}
