--- a/chat/templates/chat/premium_chat.html
+++ b/chat/templates/chat/premium_chat.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<h2>{{ interlocutor.full_name }}</h2>
+<a href="{% url 'accounts:profile' interlocutor.username %}"><h2>{{ interlocutor.full_name }}</h2></a>
 
 
 <ul id="chat_log">
