--- a/doctors/templates/doctors/base.html
+++ b/doctors/templates/doctors/base.html
@@ -5,9 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<a href="{% url 'doctors:index' %}">MEDICAL~Site</a>
 {% if user.is_authenticated %}
 <a href="{% url 'accounts:profile' user.username %}">{{ user.username }}</a>
 <a href="{% url 'accounts:logout' %}">logout</a>
+<span id="user_balance">Баланс: {{ user.balance.balance }}</span>
+<a href="{% url 'chat:ordered_call_list' %}">Ваши звонки</a>
 {% if user.is_superuser %}
 <a href="{% url 'chat:admin_chat_list' %}">Чат</a><br>
 {% else %}
