--- a/doctors/templates/doctors/base.html
+++ b/doctors/templates/doctors/base.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    {% block meta %}
+    {% endblock %}
 </head>
 <body>
 <a href="{% url 'doctors:index' %}">MEDICAL~Site</a>
