--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'doctors/base.html' %}
+{% load static %}
+{% block content %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {% for input in form %}
+        <label>{{ input.label }}: {{ input }}</label><br><br>
+        {% endfor %}
         <button type="submit">Изменить пороль</button>
     </form>
-</body>
-</html>
+{% endblock %}
