--- a/accounts/templates/accounts/client_profile.html
+++ b/accounts/templates/accounts/client_profile.html
@@ -25,6 +25,9 @@
 {% if user.is_superuser and not page_user.is_superuser  %}
 <a href="{% url 'moderation:make_user_admin' page_user.username %}">Сделать администратором</a><br>
 {% endif %}
+{% if page_user != user %}
+<a href="{% url 'moderation:create_complaint' page_user.username %}">Подать жалобу</a><br>
+{% endif %}
 
 {% if user == page_user %}
 <a href="{% url 'paynament:top_up_balance' %}">Пополнить баланс</a>
