--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -9,3 +9,7 @@
         <button type="submit">Зарегистрироваться</button>
     </form>
 {% endblock %}
+
+{% block scripts %}
+<script src="{% static 'accounts/js/create_profile.js' %}"></script>
+{% endblock %}
