--- a/moderation/templates/moderation/conflict_resolution.html
+++ b/moderation/templates/moderation/conflict_resolution.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<span>Сообщение пользователю {{ page_user.username }}</span>
+<span>Сообщение пользователю {{ not_right_user.full_name }}</span>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
