--- a/chat/templates/chat/admin_chat_list.html
+++ b/chat/templates/chat/admin_chat_list.html
@@ -21,7 +21,10 @@
             height: 50px">
     </div>
 {% endif %}
-<a href="{% url 'chat:admin_chat' chat.id %}">{{ chat|get_interlocutor:user }} {{ chat|not_read_admin_messages:user }}</a>
+<a class="chat_item" href="{% url 'chat:admin_chat' chat.id %}" data-id="{{ chat.id }}">
+    {{ chat|get_interlocutor:user }}
+</a><br>
+<span>Новые сообщеения: </span><span data-chat-id="{{ chat.id }}">{{ chat|not_read_admin_messages:user }}</span></span>
 {% endwith %}
 <br>
 {% endfor %}
