--- a/doctors/templates/doctors/base.html
+++ b/doctors/templates/doctors/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,10 +15,10 @@
 <span id="user_balance">Баланс: {{ user.balance.balance }}</span>
 <a href="{% url 'chat:ordered_call_list' %}">Ваши звонки</a>
 {% if user.is_superuser %}
-<a href="{% url 'chat:admin_chat_list' %}">Чат</a><br>
+<a href="{% url 'chat:admin_chat_list' %}">Чат</a><span id="new_admin_messages">{{ request.new_admin_messages_count }}</span><br>
 {% else %}
-<a href="{% url 'chat:premium_chat_list' %}">Чат</a>
-<a href="{% url 'chat:admin_chat_list' %}">Администрация</a>
+<a href="{% url 'chat:premium_chat_list' %}">Чат</a><span id="new_premium_messages">{{ request.new_premium_messages_count }}</span>
+<a href="{% url 'chat:admin_chat_list' %}">Администрация</a><span id="new_admin_messages">{{ request.new_admin_messages_count }}</span>
 {% endif %}
 {% else %}
     <a href="{% url 'accounts:register_client' %}">Для клиентов</a>
@@ -25,10 +26,28 @@
     <a href="{% url 'accounts:login' %}">Вход</a>
 {% endif %}
 <hr>
+<div class="messages"> <!-- Сообщения во всплывающем окошке о кокомтом успешном действии или наоборот  -->
+    <ul>
+    {% for message in messages %}
+        <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+</div>
+<div id="incoming_call_window" style="display:none;
+border: 1px solid grey">
+    <h3>Входящий звонок</h3>
+    <div id="call__user_photo">
+    </div>
+    <span id="call__user_full_name"></span><br>
+    <span id="call__time"></span>
+    <a id="call__call_start_btn">Начать звонок</a>
+    <button id="call__cansel_call_btn" type="button">Зайти позже</button>
+</div>
 {% block content %}
 {% endblock %}
 
 {% block scripts %}
 {% endblock %}
+<script src="{% static 'chat/js/messages_script.js' %}"></script>
 </body>
 </html>
