--- a/chat/templates/chat/ordered_call_list.html
+++ b/chat/templates/chat/ordered_call_list.html
@@ -3,6 +3,7 @@
 {% load chat_filters %}
 {% block content %}
 
+<h2>Забронированный звоки</h2>
 {% if calls %}
 {% for call in calls %}
 <div style="border: 1px solid grey">
