--- a/accounts/templates/accounts/doctor_profile.html
+++ b/accounts/templates/accounts/doctor_profile.html
@@ -1,6 +1,7 @@
 {% extends 'doctors/base.html' %}
 {% load static %}
 {% block content %}
+
 <br>
 {% if page_user.photo %}
 <div class="user_photo" style="background: url({{ page_user.photo.url }}) center no-repeat;
@@ -20,6 +21,10 @@
 <span>Имя: {{ page_user.full_name }}</span><br>
 <span>BIO: {{ page_user.doctor.service_cost}}</span><br>
 <span>BIO: {{ page_user.doctor.bio }}</span><br><br>
+{% if user.is_staff %}
+<span>Количество жалоб: {{ page_user.accused_standard_complaints.count }}</span><br>
+{% endif %}
+
 {% if page_user.doctor.is_confirmed %}
 <span>Квалификации: </span>
 <ul>
@@ -34,6 +39,10 @@
 <a href="{% url 'accounts:change_password' %}">Изменить пароль</a><br>
 {% elif user.is_staff %}
 <a href="{% url 'accounts:ban' page_user.username %}">Заблокировать</a><br>
+{% endif %}
+
+{% if user.is_staff %}
+<a href="{% url 'moderation:admin_email' page_user.username %}">Написать email</a><br>
 {% endif %}
 
 {% if page_user.doctor.rating %}
@@ -56,15 +65,19 @@
 {% endif %}
 {% endif %}
 
+{% if calendar %}
 <div id="calendar_container">
 
 </div><br>
+{% else %}
+<h3>Нету времени посещения</h3>
+{% endif %}
 
 {% if page_user == user %}
 <a href="{% url 'calendars:create_visiting_time' %}">Добавить время для визита</a><br>
 {% endif %}
 
-{% if page_user != user %}
+{% if page_user != user and not user.is_staff %}
 <form action="{% url 'doctors:create_review' page_user.username %}" method="post">
     {% csrf_token %}
     {{ review_form.as_p }}
