--- a/chat/templates/chat/premium_chat.html
+++ b/chat/templates/chat/premium_chat.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 
+<h2>Список чатов</h2>
 {% if interlocutor.photo %}
 <div class="user_photo" style="background: url({{ interlocutor.photo.url }}) center no-repeat;
             background-size: auto 100%;
