--- a/doctors/templates/doctors/base.html
+++ b/doctors/templates/doctors/base.html
@@ -14,8 +14,9 @@
 <a href="{% url 'accounts:logout' %}">logout</a>
 <span id="user_balance">Баланс: {{ user.balance.balance }}</span>
 <a href="{% url 'chat:ordered_call_list' %}">Ваши звонки</a>
-{% if user.is_superuser %}
-<a href="{% url 'chat:admin_chat_list' %}">Чат</a><span id="new_admin_messages">{{ request.new_admin_messages_count }}</span><br>
+{% if user.is_staff %}
+<a href="{% url 'chat:admin_chat_list' %}">Чат</a><span id="new_admin_messages">{{ request.new_admin_messages_count }}</span>
+<a href="{% url 'admin:index' %}">Админ панель</a><br>
 {% else %}
 <a href="{% url 'chat:premium_chat_list' %}">Чат</a><span id="new_premium_messages">{{ request.new_premium_messages_count }}</span>
 <a href="{% url 'chat:admin_chat_list' %}">Администрация</a><span id="new_admin_messages">{{ request.new_admin_messages_count }}</span>
