--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,7 +1,9 @@
 {% extends 'admin/index.html' %}
 {% block content %}
+{% if user.is_superuser %}
 <div class="site_balance_block">
     <a href="{% url 'paynament:site_balance' %}">Изменить процент дохода сайта</a>
 </div><br>
+{% endif %}
 {{ block.super }}
 {% endblock %}
