--- a/calendars/templates/calendars/add_visiting_time.html
+++ b/calendars/templates/calendars/add_visiting_time.html
@@ -14,6 +14,7 @@
     </ul>
     {% csrf_token %}
     {{ form.as_p }}
+    <span>Дата в формате (01.01.2020 00:00)</span><br>
     <button type="submit">Создать</button>
 </form>
 
