--- a/calendars/templates/calendars/booked_error.html
+++ b/calendars/templates/calendars/booked_error.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'doctors/base.html' %}
+{% load static %}
+{% block content %}
     <h1>Уже забронирован</h1>
 
-</body>
-</html>
+{% endblock %}
