--- a/chat/templates/chat/ordered_call.html
+++ b/chat/templates/chat/ordered_call.html
@@ -3,18 +3,16 @@
 {% load chat_filters %}
 
 {% block meta %}
-<meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
-<meta http-equiv="expires" content="0">
-<meta http-equiv="pragma" content="no-cache">
+
 {% endblock %}
 
 {% block content %}
 <h2 id="connection_info" style="display: none">Соеденение потеряно</h2>
 
 <div id="call_interface_container">
-    <label>Камера: <input type="checkbox" checked id="video-checkbox" onchange="" autocomplete="off" value="Включить камеру"><br>
+    <label>Камера: <input type="checkbox" checked id="video-checkbox" value="Включить камеру"><br>
     </label>
-    <label>Микрофон: <input type="checkbox" checked id="audio-checkbox" onchange="" autocomplete="off" value="Включить камеру"><br>
+    <label>Микрофон: <input type="checkbox" checked id="audio-checkbox" value="Включить камеру"><br>
     </label>
     <span id="timer">Время до конца: </span><br>
     <span>{{ user.full_name }}</span><br>
