--- a/calendars/templates/calendars/book_call.html
+++ b/calendars/templates/calendars/book_call.html
@@ -4,7 +4,7 @@
 <br>
 Time: {{ visiting_time.time }}<br>
 Max call during: {{ visiting_time.max_time }}<br>
-Call cost for full time: {{ visiting_time.get_total_price }} фантиков<br>
+Call cost for full time: {{ visiting_time.get_total_price }}$<br>
 (Cost may vary depending on time)
 <form method="post">
     {% csrf_token %}
