--- a/moderation/templates/moderation/add_qualifications.html
+++ b/moderation/templates/moderation/add_qualifications.html
@@ -4,7 +4,7 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Добавить квалификацию</button>
+    <button type="submit">Add Qualification</button>
 </form>
 
 
