--- a/paynament/templates/paynament/top_up_balance.html
+++ b/paynament/templates/paynament/top_up_balance.html
@@ -5,7 +5,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form }}
-    <button type="submit">Пополнить баланс</button>
+    <button type="submit">Top up balance</button>
 </form>
 
 
