--- a/paynament/templates/paynament/update_site_balance.html
+++ b/paynament/templates/paynament/update_site_balance.html
@@ -3,10 +3,10 @@
 {% block content %}
 
 <form method="post">
-    <span>Баланс сайта: {{ site_balance }} фантиков</span><br>
+    <span>Site Balance: {{ site_balance }}$</span><br>
     {% csrf_token %}
     {{ form }}<br>
-    <button type="submit">Обновить процент</button>
+    <button type="submit">Update commission</button>
 </form>
 
 
